Fixed a white space issue by removing section first of type css and creating a section after the navbar with an id and giving that section padding of its own

--- a/public/landing.css
+++ b/public/landing.css
@@ -27,8 +27,12 @@ header {
   left: 30%;
 }
 
+#landingGhost {
+  color: #fff;
+}
 
 /* ------ Features Section ------ */
+
 
 .features-description {
   line-height: 145%;
